--- a/django-react/frontend/package.json
+++ b/django-react/frontend/package.json
@@ -20,5 +20,8 @@
     "webpack": "^5.64.2",
     "webpack-cli": "^4.9.1"
   },
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "react-router-dom": "^6.0.2"
+  }
 }
