--- a/MundusTraveller/frontend/package.json
+++ b/MundusTraveller/frontend/package.json
@@ -30,7 +30,10 @@
     "axios": "^0.24.0",
     "mapbox-gl": "^2.6.1",
     "react-map-gl": "^6.1.18",
+    "react-map-gl-geocoder": "^2.2.0",
+    "react-mapbox-gl-geocoder": "^1.1.0",
     "react-router-dom": "^5.3.0",
+    "reactstrap": "^9.0.1",
     "save-dev": "^0.0.1-security",
     "webpack-dev-server": "^4.6.0"
   }
